[gd_scene load_steps=13 format=3 uid="uid://1p8erkxoao7t"]

[ext_resource type="Script" path="res://Characters/Enemies/Projectiles/wave_bullet.gd" id="1_55jpl"]
[ext_resource type="Texture2D" uid="uid://bvr4muynvepme" path="res://Art/My Art/Player/generic_player_projectile.png" id="2_6q4x0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_is6ms"]
atlas = ExtResource("2_6q4x0")
region = Rect2(15, 15, 2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ac0k3"]
size = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_ll1j4"]
offsets = PackedFloat32Array(0, 0.231013, 0.719937)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4xrh2"]
gradient = SubResource("Gradient_ll1j4")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_3ofsn"]
offsets = PackedFloat32Array(0, 0.727848)
colors = PackedColorArray(0.497474, 0.497474, 0.497474, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4dwbn"]
gradient = SubResource("Gradient_3ofsn")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_h3dnn"]
offsets = PackedFloat32Array(0, 0.351504)
colors = PackedColorArray(1, 0, 0, 0.247059, 1, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_auujr"]
gradient = SubResource("Gradient_h3dnn")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_fb1we"]
offsets = PackedFloat32Array(0, 0.351504)
colors = PackedColorArray(0.6, 0.898039, 0.313726, 0.337255, 0.6, 0.898039, 0.313726, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cmyqg"]
gradient = SubResource("Gradient_fb1we")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="round_enemy_bullet" type="Area2D"]
collision_layer = 256
collision_mask = 8
script = ExtResource("1_55jpl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_is6ms")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_ac0k3")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(0.1, 0.1)

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
color = Color(0.580392, 0.980392, 1, 1)
energy = 1.2
texture = SubResource("GradientTexture2D_4xrh2")
texture_scale = 0.75

[node name="PointLight2D2" type="PointLight2D" parent="."]
visible = false
position = Vector2(-1, 0)
color = Color(0.207843, 0.709804, 0.972549, 1)
energy = 1.2
shadow_enabled = true
shadow_item_cull_mask = 2
texture = SubResource("GradientTexture2D_4dwbn")

[node name="color_red" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_auujr")

[node name="color_green" type="Sprite2D" parent="."]
visible = false
texture = SubResource("GradientTexture2D_cmyqg")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
